# graphidesk-

./: .gitignore  CAHIER_DES_CHARGES.docx  CAHIER_DES_CHARGES.md  CLAUDE_INSTRUCTIONS.md  CUsersneaujDesktoptest.html  generate_normalized_excel.cjs  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml  warm-cache.yml
.tauri/: .~lock.graphidesk.key#  graphidesk.key.pub
memory/: MEMORY.md  feedback_version_bump.md
plugins/cotes-bat-uxp/: README.md  index.html  index.js  manifest.json  styles.css
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/fabrik/actions/: CutContour.aia  OffsetSet.aia  PathfinderUnion.aia  Vecto_Contour.aia  Vecto_Texte.aia
src-tauri/assets/fabrik/scripts/: bache_creation.jsx  biblio_export_selection.jsx  biblio_injecte.jsx  caisson_double_generation.BROKEN.jsx  caisson_double_generation.jsx  caisson_generation.jsx  caisson_multi_generation.jsx  entretoises_automation.jsx  full_automation.jsx  lettres_boitiers.jsx  neon_flex.jsx  oeillets_fab.jsx  oeillets_maquette.jsx  premaquette_open.jsx  recale_vt.jsx
src-tauri/assets/indesign/: Cotes-BAT.ccx
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/data/: pantoneColors.ts  ralColors.ts
src/hooks/: useAppUpdate.ts  useAuth.ts  useBats.ts  useBibliotheque.ts  useDossiers.ts  useEffectiveRole.ts  useEmailHeuresSup.ts  useFeedbacks.ts  useHasPermission.ts  (+11 more)
tasks/: todo.md
tools/: entretoises_calibration.jsx
(+170 files in other folders)
